--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicholas Rasendriya - Portfolio</title>
+    <title>Nicholas Rasendriya - Website</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="/assets/mylogo.jpeg">
 </head>
@@ -30,7 +30,6 @@
     </nav>
 
     <div class="container">
-        <!-- Hero Section -->
         <section id="hero" class="section hero">
             <div class="hero-content">
                 <h1 id="welcome-message">Welcome to My Website</h1>
@@ -44,18 +43,18 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div style="text-align: center;">
-                    <div class="profile-image"></div>
+                    <div class="profile-image" alt="Nicholas Rasendriya" title="Nicholas Rasendriya"></div>
                 </div>
                 <div class="about-text">
                     <p id="about-me">
                         Hi, I’m <strong>Nicholas Rasendriya</strong>.<br>
                         I’m a creative problem-solver who loves turning ideas into something people can see, use, and enjoy. From building sleek, responsive websites to finding and fixing the bugs no one else can catch, I bring both precision and creativity to every project.
-                        For me, each project is not just a task, but an opportunity to learn, improve, and push the limits of what’s possible — all while delivering results that truly make an impact.
+                        For me, each project is not just a task, but an opportunity to learn, improve, and push the limits of what’s possible, all while delivering results that truly make an impact.
                     </p>
                     <div style="margin-top: 20px;">
                         <span style="background: #ff6300; color: white; padding: 8px 15px; border-radius: 20px; margin-right: 10px; font-size: 0.9em;">Creative</span>
                         <span style="background: #764ba2; color: white; padding: 8px 15px; border-radius: 20px; margin-right: 10px; font-size: 0.9em;">Innovative</span>
-                        <span style="background: #667eea; color: white; padding: 8px 15px; border-radius: 20px; font-size: 0.9em;">Professional</span>
+                        <span style="background: #667eea; color: white; padding: 8px 15px; border-radius: 20px; font-size: 0.9em;">Visionary</span>
                     </div>
                 </div>
             </div>
@@ -121,59 +120,60 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="portfolio-image">📊</div>
+                    <div class="portfolio-image">🎬</div>
                     <div class="portfolio-content">
-                        <h3>Data Visualization</h3>
-                        <p>Interactive dashboards and reports that transform complex data into actionable insights.</p>
+                        <h3>Film & Game Rating</h3>
+                        <p>Website about my opinion and rating for a certain game and movie that I played.</p>
                         <a href="#" class="portfolio-link">View Project</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="section">
-            <h2>Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-form">
-                    <input type="text" placeholder="Your Name" required>
-                    <input type="email" placeholder="Your Email" required>
-                    <input type="text" placeholder="Subject" required>
-                    <textarea rows="6" placeholder="Your Message" required></textarea>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </div>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon">📧</div>
-                        <div>
-                            <h4>Email</h4>
-                            <p>nickasmara12@gmail.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📱</div>
-                        <div>
-                            <h4>Phone</h4>
-                            <p>+62 857-1801-1321</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📷</div>
-                        <div>
-                            <h4>Instagram</h4>
-                            <p>@nicorey_c</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">🌐</div>
-                        <div>
-                            <h4>Portfolio</h4>
-                            <p>www.nicholasrasendriya.com</p>
-                        </div>
-                    </div>
+        <!-- Contact Section | Message Us -->
+<section id="contact" class="section">
+    <h2>Get In Touch</h2>
+    <div class="contact-content">
+        <form class="contact-form">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="text" name="subject" placeholder="Subject" required>
+            <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+        <div class="contact-info">
+            <div class="contact-item">
+                <div class="contact-icon">📧</div>
+                <div>
+                    <h4>Email</h4>
+                    <p>nickasmara12@gmail.com</p>
                 </div>
             </div>
-        </section>
+            <div class="contact-item">
+                <div class="contact-icon">📱</div>
+                <div>
+                    <h4>Phone</h4>
+                    <p>+62 857-1801-1321</p>
+                </div>
+            </div>
+            <div class="contact-item">
+                <div class="contact-icon">📷</div>
+                <div>
+                    <h4>Instagram</h4>
+                    <p>@nicorey_c</p>
+                </div>
+            </div>
+            <div class="contact-item">
+                <div class="contact-icon">🌐</div>
+                <div>
+                    <h4>Portfolio</h4>
+                    <p>www.nicholasrasendriya.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Submission Display Box -->
+</section>
     </div>
 
     <footer>
