--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicholas Rasendriya - Website</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="/assets/mylogo.jpeg">
+    <link rel="icon" type="image/png" href="assets/mylogo.jpeg">
 </head>
 <body>
     <!-- Welcome Popup -->
